# claude-code-memory

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/claude_memory/: cli.py  config.py  embeddings.py  server.py  storage.py  summarizer.py  transcript.py  web.py
src/claude_memory/assets/commands/: claude-memory-delete.md  claude-memory-history.md  claude-memory-pull-global.md  claude-memory-push-global.md  claude-memory-status.md
src/claude_memory/hooks/: _log.py  on_prompt.py  on_session_end.py  on_stop.py
src/lynx_memory/: autotag.py  cli.py  config.py  embeddings.py  server.py  storage.py  summarizer.py  transcript.py  web.py
src/lynx_memory/assets/commands/: lynx-memory-delete.md  lynx-memory-history.md  lynx-memory-pull-global.md  lynx-memory-push-global.md  lynx-memory-status.md
src/lynx_memory/hooks/: on_prompt.py  on_session_end.py  on_stop.py
src/lynx_memory/storage/: __init__.py  _base.py  _crud.py  _retrievals.py  _scoped_search.py  _search.py  _tags.py
tests/: test_cli_codex_config.py  test_memory_injection.py  test_summarizer_backends.py  test_transcript.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: RetrievalsView.tsx  SettingsPanel.tsx  TurnCard.tsx
web/src/utils/: linkSanitizer.ts
