[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlynx"
version = "0.3.1"
description = "OpenLynx — persistent semantic memory for Claude Code, Codex CLI and other coding agents. Auto-saves and recalls conversation history across sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "OpenLynx contributors" }]
keywords = ["openlynx", "lynx-memory", "claude", "claude-code", "codex", "memory", "rag", "embeddings", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.5.0",
    "voyageai>=0.3.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/by123/lynx-memory"
Issues = "https://github.com/by123/lynx-memory/issues"

[project.scripts]
lynx-memory = "lynx_memory.cli:main"
lynx-memory-on-prompt = "lynx_memory.hooks.on_prompt:main"
lynx-memory-on-stop = "lynx_memory.hooks.on_stop:main"
lynx-memory-on-session-end = "lynx_memory.hooks.on_session_end:main"
lynx-memory-mcp = "lynx_memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lynx_memory"]

[tool.hatch.build.targets.wheel.force-include]
"src/lynx_memory/assets/commands/lynx-memory-status.md" = "lynx_memory/assets/commands/lynx-memory-status.md"
"src/lynx_memory/assets/commands/lynx-memory-pull-global.md" = "lynx_memory/assets/commands/lynx-memory-pull-global.md"
"src/lynx_memory/assets/commands/lynx-memory-push-global.md" = "lynx_memory/assets/commands/lynx-memory-push-global.md"
"src/lynx_memory/assets/commands/lynx-memory-delete.md" = "lynx_memory/assets/commands/lynx-memory-delete.md"
"src/lynx_memory/assets/commands/lynx-memory-history.md" = "lynx_memory/assets/commands/lynx-memory-history.md"
"src/lynx_memory/assets/web" = "lynx_memory/assets/web"

[tool.hatch.build.targets.sdist]
include = [
    "src/lynx_memory",
    "README.md",
    "README.zh-CN.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"src/lynx_memory/assets/web" = "src/lynx_memory/assets/web"
